Opened 16 years ago

Closed 16 years ago

#1821 closed bug (fixed)

Overlapping menuitems not focused when mouse is inside parent menu frame

Reported by: mmlr Owned by: jackburton
Priority: normal Milestone: R1
Component: User Interface Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When a menu is opened from a parent menu, the child menu does not get focused as long as the mouse stays inside the frame of the parent menu. This causes unexpected behaviour as the mouse is visibly over the opened child menu, but moving it does change the parent menu as the child has no focus. Will attach pictures that hopefully the show it better than I can describe it...

To reproduce:

  1. Run Haiku with a small resolution (800x600 for example)
  2. Click on ProcessController replicant to open the menu
  3. Go to "Threads and CPU Usage"
  4. Select "kernel team" -> The threads child menu does now not fit on screen anymore and therefore (correctly) overlaps the parent menu.
  5. Move the mouse so it is over the "idle thread" for example, but still in the frame of the "Threads and CPU Usage" menu.

Now the "idle thread" menu item is not selected and moving the mouse down selects the next team.

Attachments (3)

menufocus1.png (24.8 KB ) - added by mmlr 16 years ago.
menufocus2.png (22.3 KB ) - added by mmlr 16 years ago.
menufocus3.png (28.0 KB ) - added by mmlr 16 years ago.

Download all attachments as: .zip

Change History (5)

by mmlr, 16 years ago

Attachment: menufocus1.png added

by mmlr, 16 years ago

Attachment: menufocus2.png added

by mmlr, 16 years ago

Attachment: menufocus3.png added

comment:1 by jackburton, 16 years ago

Status: newassigned

It seems it's only triggered by ProcessController. A similar situation as you described occurs with tracker "NavMenu", when you open it near the right end of the screen and yoo descend a lot of directories, but there menus work correctly.

comment:2 by jackburton, 16 years ago

Resolution: fixed
Status: assignedclosed

It's fixed in hrev24044.

Note: See TracTickets for help on using tickets.